<resources>
    <string name="app_name">AppDelivery</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Produtos -->
    <string name="mcNome">Mc Lanche</string>
    <string name="mcPreco">R$ 4.90</string>
    <string name="hamburguer">Hamburguer</string>
    <string name="batata_frita">Batata Frita</string>
    <string name="balde_frango">Balde Frango</string>
    <string name="nuggets">Nuggets</string>
    <string name="ramen">Ramen</string>
    <string name="sushi">Sushi</string>
    <string name="onigiri">Onigiri</string>

    <!-- Fragmentos Strings -->
    <string name="restaurantes">Restaurantes</string>
    <string name="mcdonalds">McDonald\'s</string>
    <string name="kfc">KFC</string>
    <string name="sushi_restaurante">Sushi</string>
    <string name="adicionar_carrinho">Adicionar</string>

    <!-- Carrinho Strings -->
    <string name="itens_carrinho">Total de itens no carrinho</string>
    <string name="subtotal">Subtotal</string>
    <string name="taxa_de_entrega">Taxa de Entrega</string>
    <string name="total">Total</string>
    <string name="finalizar_pedido">Finalizar Pedido</string>
    <string name="alerta">Você deve preencher todos os campos!</string>
    <string name="pedido_recebido">Seu pedido foi recebido</string>
    <string name="retirada">Retirada</string>
    <string name="entregar">Entregar</string>
    <string name="avancar">Avançar</string>

    <!-- Dados do Cliente Strings -->
    <string name="dados_do_cliente">Dados do Cliente</string>
    <string name="nome">Nome:</string>
    <string name="endereco">Endereço:</string>
    <string name="cidade">Cidade:</string>
    <string name="cep">CEP:</string>
    <string name="cartao_de_credito">Cartão de Crédito</string>
    <string name="numero_do_cartao">Número do Cartão</string>
    <string name="validade_do_cartao">Validade do Cartão</string>



</resources>